--- a/style.css
+++ b/style.css
@@ -2344,3 +2344,86 @@ p {
           flex-direction: column;
         }
       }
+      .about-us {
+        margin: 4em auto;
+        width: 1100px;
+        max-width: 90%;
+      }
+      .about-us::after {
+        clear: both;
+        content: "";
+        display: table;
+      }
+      @media only screen and (min-width: 1000px) {
+        .about-us article, .about-us aside {
+          float: left;
+          width: 47.5%;
+        }
+      }
+      @media only screen and (min-width: 1000px) {
+        .about-us article {
+          margin-right: 5%;
+        }
+      }
+      .about-us article h2 {
+        margin: 0;
+        font-size: 40px;
+        font-weight: 500;
+        color: #33334f;
+      }
+      .about-us article p {
+        margin-bottom: 2em;
+        font-size: 18px;
+        line-height: 28px;
+        font-weight: 400;
+        color: #3B5266;
+      }
+      .about-us aside ul {
+        margin: 0;
+        padding: 5rem 0 0 0;
+        list-style: none;
+      }
+      .about-us aside ul::after {
+        clear: both;
+        content: "";
+        display: table;
+      }
+      .about-us aside ul li {
+        display: table;
+        width: 100%;
+        height: 170px;
+      }
+      @media only screen and (min-width: 1000px) {
+        .about-us aside ul li {
+          float: left;
+          width: 33.3333333333%;
+        }
+      }
+      .about-us aside ul li:first-child {
+        background-color: #afce44;
+      }
+      .about-us aside ul li:nth-child(2) {
+        background-color: #35b8e4;
+      }
+      .about-us aside ul li:nth-child(3) {
+        background-color: #308fc3;
+      }
+      .about-us aside ul li h3 {
+        display: table-cell;
+        vertical-align: middle;
+        text-align: center;
+      }
+      .about-us aside ul li h3 span {
+        display: block;
+        color: #fff;
+      }
+      .about-us aside ul li h3 span:first-child {
+        font-family: 'Roboto', sans-serif;
+        font-size: 60px;
+        font-weight: 700;
+      }
+      .about-us aside ul li h3 span:nth-child(2) {
+        font-size: 12px;
+        font-weight: 600;
+        text-transform: uppercase;
+      }
